# baker-dx

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  baker_dx_state_default.json  bundle.sh  github-list-releases-parameters.json  tutorial.html  tutorial.md
assets/: tailwind.css
assets/styling/: main.css  modal.css
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  log4rs.yaml
server/src/: main.rs
src/: main.rs
src/components/: mod.rs  tests.rs
src/components/baker/: capture.rs  chat_area.rs  input_bar.rs  layout.rs  mod.rs  modals.rs  models.rs  settings.rs  sidebar.rs  storage.rs
src/components/baker/storage/: legacy.rs
src/views/: home.rs
