[package]
name = "baker-dx"
version = "0.6.0"
authors = ["Wanye_7300 <chensiyuan-2009@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
dioxus = { version = "0.7.1", features = ["router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
tokio = { version = "1.44.1", features = ["time"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
reqwest = "0.13.2"
webbrowser = "1.1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }
